<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_menu_create_group"
            android:icon="@drawable/ic_create_group"
            android:title="@string/create_group" />
        <item
            android:id="@+id/nav_menu_join_group"
            android:icon="@drawable/ic_join_group"
            android:title="@string/join_group" />
        <item
            android:id="@+id/nav_menu_add_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/add_profile" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_menu_explore"
            android:icon="@drawable/ic_search_group"
            android:title="@string/exlpore" />


    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_menu_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_menu_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us_on_app_store" />
        <item
            android:id="@+id/nav_menu_send_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/send_feedback" />
        <item
            android:id="@+id/nav_menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>
    <item android:title="@string/terms_and_conditions">
        <menu>
            <item android:title=""/>
        </menu>
    </item>
</menu>