<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/size_two"
        android:title="@string/_2_images_per_row"
        app:showAsAction="never" />
    <item
        android:id="@+id/size_three"
        android:title="@string/_3_images_per_row"
        app:showAsAction="never" />
    <item
        android:id="@+id/size_four"
        android:title="@string/_4_images_per_row"
        app:showAsAction="never" />
</menu>